# music-playlist-transfer

./: CMakeLists.txt  README.md  base64.cpp  main.cpp  spotifyFUNCS.cpp  youtubeFUNCS.cpp
libs/: spotifyFUNCS.hpp
libs/music-playlist-transfer/: spotifyFUNCS.hpp  youtubeFUNCS.hpp
music-playlist-transfer/: songstruct.hpp  spotifyFUNCS.hpp  youtubeFUNCS.hpp
